--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             background: white;
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
         h2 {
             color: #333;
@@ -26,7 +27,7 @@
             font-weight: bold;
             display: block;
             margin-top: 10px;
-            text-align: left;
+            text-align: center;
         }
         input {
             width: 100%;
@@ -35,6 +36,8 @@
             border: 1px solid #ccc;
             border-radius: 5px;
             font-size: 16px;
+            text-align: center;
+            display: block;
         }
         button {
             width: 100%;
