--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             text-align: center;
         }
         input {
-            width: 100%;
+            width: calc(100% - 20px);
             padding: 10px;
             margin: 5px 0 15px;
             border: 1px solid #ccc;
